# website

./: .gitmodules  Makefile  jaif2020-website.cabal
assets/css/: side-menu.css
assets/txt/: humans.txt  robots.txt
pages/: index.org  infos-pratiques.org  inscription.org  programme.org
src/: site.hs
templates/: default.html
