name:               jaif2020-website
version:            0.1
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , directory
                  , filepath
                  , hakyll
                  , process
                  , text
  ghc-options:      -Wall -threaded
  default-language: Haskell2010
